k8s/frontend/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: frontend
spec:
  # type: LoadBalancer 
  type: NodePort 
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
